# aero-forge

./: .gitignore  BLUEPRINT.md  MIGRATION_PLAN.md  PROMPT_ENGINEERING.md  README.md  prompt_engineering_report.json  pyproject.toml  workspace_blueprint.yaml
aero_forge/: __init__.py  _constants.py  blueprint.py  build_runner.py  build_summary.py  chat.py  cli.py  config.py  error_explainer.py  errors.py  examples.py  generate.py  gpu.py  hin_vm.py  ignore.py  monorepo.py  project_builder.py  prompt_engineering.py  prompts.py  server.py  variants.py  wasm.py
aero_forge/algorithms/: __init__.py  matrix_multiply.py
aero_forge/builder/: __init__.py  artifact_generator.py  builder.py  language_router.py  spec.py
aero_forge/cache/: __init__.py  build_cache.py  fix_cache.py
aero_forge/environment/: __init__.py  verify_dependencies.py
aero_forge/healing/: __init__.py  router.py
aero_forge/invisible_config/: __init__.py  engine.py  lean_parser.py
aero_forge/llm/: __init__.py  clients.py
batch_analytics_engine/: README.md  pyproject.toml
batch_analytics_engine/.github/workflows/: ci.yml
batch_analytics_engine/python_engine/batch_analytics/: __init__.py  _native.pyi  client.py  service.py  utils.py
batch_analytics_engine/python_engine/benchmarks/: bench_aggregator.py
batch_analytics_engine/python_engine/tests/: test_aggregator.py
batch_analytics_engine/rust_core/: Cargo.toml
batch_analytics_engine/rust_core/src/: aggregator.rs  errors.rs  lib.rs  outlier.rs  record.rs
batch_analytics_engine/scripts/: run_service.py
examples/: README.md
scripts/: stress_web_builder.py
stress_tests/: README.md  test_llm_rate_limits.py  test_stress.py
tests/: test_aero_frontend.py  test_algorithms.py  test_autodetect.py  test_blueprint.py  test_blueprint_orchestrator.py  test_build_runner.py  test_chat.py  test_cli.py  test_cross_compile.py  test_environment_contract.py  test_error_classifier.py  test_error_explainer.py  test_examples.py  test_explain.py  test_fix_cache.py  test_generate.py  test_ignore.py  test_llm_clients.py  test_model_client.py  test_orchestrator.py  test_overlay.py  test_polyglot_builder.py  test_pre_write_validation.py  test_project_builder.py  test_prompt_engineering.py  test_repo_generator.py  test_review.py  test_router.py  test_sandbox.py  test_sandbox_web.py  test_scaffold_import.py  test_server.py  test_test_generator.py  test_transpiler_constructs.py  test_variants.py  test_wasm.py  test_web_incremental.py
(+230 files in other folders)
