[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aero-forge"
version = "0.1.0"
description = "LLM-integrated build tool that transpiles Python functions to native Rust extensions."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0,<3.0",
    "click>=8.0",
    "tree-sitter",
    "pydantic",
    "pyyaml>=5.0",
    "numpy",
    "networkx",
    "z3-solver",
    "websockets>=10.0",
    "aiohttp>=3.8",
]

[project.optional-dependencies]
dev = ["pytest", "black"]
gemini = ["google-generativeai>=0.7.0"]

[project.scripts]
aero-forge = "aero_forge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests", "stress_tests/test_stress.py", "stress_tests/test_llm_rate_limits.py"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aero_forge*"]

[tool.setuptools.package-data]
aero_forge = ["templates/*"]
